# diesel_test_2

./: Cargo.toml  Makefile
migrations/2021-02-27-092800_users/: down.sql  up.sql
migrations/2021-02-27-121712_courses/: up.sql
migrations/2021-02-27-122843_user_courses/: down.sql  up.sql
seed_data/: courses.csv  participations.csv  users.csv
src/: main.rs  schema.rs
